# jotdown

./: .gitignore  .gitmodules  CHANGELOG.md  COPYING  Cargo.toml  Makefile  README.md  flake.nix
.github/workflows/: ci.yml  release.yml  zizmor.yml
bench/criterion/: Cargo.toml  main.rs
bench/general/: Cargo.toml  README.md
bench/general/src/: main.rs
bench/iai/: Cargo.toml  main.rs
bench/input/: Cargo.toml  block_footnotes.dj  build.rs  inline_attrs.dj
benches/: bench.sh
contrib/: bench_row.sh  bench_table.sh  flake.nix  pre-commit  tag-release.sh
examples/jotdown_wasm/: Cargo.toml  Makefile  build.rs  demo.html  index.html
examples/jotdown_wasm/src/: lib.rs
examples/jotup_wasm/: Cargo.toml  build.rs
examples/jotup_wasm/src/: lib.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: compare_renderers.rs
src/: async.rs  attr.rs  block.rs  help.txt  html.rs  inline.rs  lex.rs  lib.rs  main.rs  span.rs  string.rs  test_attr.rs  test_block.rs  test_inline.rs  test_lex.rs  tree.rs
src/html/: filters.rs  tokio.rs
tests/: attr.rs  cli.rs  filters.rs  html.rs  lib.rs  parse_events.rs
tests/afl/: Cargo.toml
tests/afl/in/: all.dj
tests/afl/src/: gen.rs  html.rs  lib.rs  main.rs  parse.rs  parse_balance.rs
tests/bench/: Makefile  skip
tests/html-ref/: .gitignore  Cargo.toml  Makefile  build.rs  lib.rs  skip
tests/html-ut/: Cargo.toml  Makefile  build.rs  cmp.rs  gen.awk  lib.rs  skip
tests/html-ut/ut/: .gitignore  attributes.test  block_quotes.test  escapes.test  footnotes.test  headings.test  images.test  inline_contaners.test  link_definitions.test  lists.test  raw_blocks.test  smart.test  tables.test  verbatim.test
tests/suite/: Makefile  gen.awk  skip
