[package]
name = "jotdown"
description = "A parser for the Djot markup language"
authors = ["Noah Hellman <noah@hllmn.net>"]
version = "0.9.0"
license = "MIT"
edition = "2021"
rust-version = "1.56"
keywords = ["djot", "markup"]
categories = ["parser-implementations"]
homepage = "https://hllmn.net/projects/jotdown"
repository = "https://github.com/hellux/jotdown"
documentation = "https://docs.rs/jotdown"
exclude = [
    "contrib",
    ".github",
    ".gitmodules",
    "Makefile",
    "bench",
    "modules",
    "tests",
]

[workspace]
members = [
    "bench/criterion",
    "bench/input",
    "examples/jotdown_wasm",
    "tests/html-ref",
    "tests/html-ut",
]
exclude = [
    "tests/afl",
    "fuzz",
]

[[bin]]
name = "jotdown"
required-features = ["html"]
doc = false

[features]
default = ["html"]
html = [] # html renderer and minimal cli binary
deterministic = [] # for stable fuzzing
async = ["dep:async-trait", "dep:tokio"]

[dependencies]
async-trait = { version = "0.1", optional = true }
tokio = { version = "1.0", features = ["io-util"], optional = true }

[profile.release]
lto = true

[profile.release.package.jotdown_wasm]
opt-level = 's'
