[package]
name = "jotup-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
jotup = { path = "..", features = ["html", "async"] }
tokio = { version = "1.0", features = ["rt", "macros"] }

[[bin]]
name = "compare_renderers"
path = "fuzz_targets/compare_renderers.rs"
test = false
doc = false
