[package]
name = "bench-crit"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.4", default-features = false }
bench-input = { path = "../input" }
jotdown = { path = "../../", default-features = false, features = ["html"] }

[[bench]]
name = "criterion"
path = "main.rs"
harness = false

[features]
default = []
softbreak = ["jotdown/softbreak"]
