[package]
name = "bench-iai"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
iai = { version = "0.1", default-features = false }
bench-input = { path = "../input" }
jotdown = { path = "../../", default-features = false, features = ["html", "deterministic"] }

[[bench]]
name = "iai"
path = "main.rs"
harness = false

[features]
default = []
softbreak = ["jotdown/softbreak"]
