[package]
name = "jotup_wasm"
description = "Web demo of Jotup"
authors = ["Noah Hellman <noah@hllmn.net>"]
license = "MIT"
version = "0.9.0"
edition = "2021"
homepage = "https://github.com/dpc/jotup"
repository = "https://github.com/dpc/jotup"

[lib]
crate-type = ["cdylib"]

[dependencies]
jotup = { path = "../../" }
wasm-bindgen = { version = "0.2", default-features = false }

[dependencies.web-sys]
version = "0.3"

[build-dependencies]
git2 = { version = "0.14", default-features = false }
