[package]
name = "jotdown-afl"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
afl = "0.11"
jotdown = { path = "../../", features = ["deterministic"] }
html5ever = "0.26"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "parse"
path = "src/parse.rs"

[[bin]]
name = "html"
path = "src/html.rs"
